--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>maplab_msgs</name>
   <version>0.0.0</version>
   <description>Message definitions for Maplab ROS interface.</description>
-  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
+  <maintainer email="maplab-dev@ethz-asl.ch">maplab-developers</maintainer>
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
