--- a/package.xml
+++ b/package.xml
@@ -13,4 +13,6 @@
   <depend>message_runtime</depend>
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
 </package>
