init port to ros2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,36 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.18...3.23)
 project(maplab_msgs)
 
-find_package(catkin_simple REQUIRED)
-catkin_simple(ALL_DEPS_REQUIRED)
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
-##########
-# EXPORT #
-##########
+find_package(ament_cmake REQUIRED)
 
-cs_install()
-cs_export()
+find_package(rosidl_default_generators REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
+set(msg_files
+  "msg/Graph.msg"
+  "msg/Trajectory.msg"
+  "msg/TrajectoryNode.msg"
+  "msg/Submap.msg"
+  "msg/DenseNode.msg"
+  "msg/SubmapConstraint.msg"
+)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  ${msg_files}
+  DEPENDENCIES geometry_msgs std_msgs sensor_msgs
+)
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  set(ament_cmake_copyright_FOUND TRUE)
+  set(ament_cmake_cpplint_FOUND TRUE)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+ament_package()
